RESOLVED FIXED52702
[GTK] No need to invalidate empty areas in ChromeClient::invalidateContentsAndWindow
https://bugs.webkit.org/show_bug.cgi?id=52702
Summary [GTK] No need to invalidate empty areas in ChromeClient::invalidateContentsAn...
Joone Hur
Reported 2011-01-18 23:35:56 PST
When rendering a web page, WebKitGtk+ invalidates empty areas too much. It causes unnecessary calls to GDK.
Attachments
Proposed Patch (1.43 KB, patch)
2011-01-19 00:01 PST, Joone Hur
no flags
Joone Hur
Comment 1 2011-01-19 00:01:21 PST
Created attachment 79397 [details] Proposed Patch
Carlos Garcia Campos
Comment 2 2011-01-19 01:56:18 PST
gdk_window_invalidate_rect() doesn't check whether the rectangle is empty, so the patch makes sense to me.
Andreas Kling
Comment 3 2011-01-19 02:06:53 PST
Comment on attachment 79397 [details] Proposed Patch r=me
WebKit Commit Bot
Comment 4 2011-01-19 05:39:20 PST
Comment on attachment 79397 [details] Proposed Patch Rejecting attachment 79397 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'bu..." exit_code: 2 Last 500 characters of output: ests/css .... http/tests/eventsource ....... http/tests/eventsource/workers . http/tests/globalhistory .... http/tests/history ............................. http/tests/incremental ...... http/tests/inspector-enabled . http/tests/inspector ...... http/tests/inspector/extensions-resources-redirect.html -> failed Exiting early after 1 failures. 21479 tests run. 418.29s total testing time 21478 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 11 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/7615202
Joone Hur
Comment 5 2011-01-19 07:36:45 PST
The above test fail is not relevant to this patch. You can see the automatically generated bug from the commit-queue. https://bugs.webkit.org/show_bug.cgi?id=52709
WebKit Commit Bot
Comment 6 2011-01-19 09:48:09 PST
Comment on attachment 79397 [details] Proposed Patch Clearing flags on attachment: 79397 Committed r76130: <http://trac.webkit.org/changeset/76130>
WebKit Commit Bot
Comment 7 2011-01-19 09:48:14 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 8 2011-01-19 10:52:59 PST
(In reply to comment #5) > The above test fail is not relevant to this patch. > You can see the automatically generated bug from the commit-queue. > https://bugs.webkit.org/show_bug.cgi?id=52709 Thanks. The commit-queue runs the tests 3 times. Twice with your patch and once w/o (if the first two runs failed). In this case, the flaky test failed both times when you patch was applied, and then didn't fail when the tests ran w/o your patch. So the queue had no choice but to (wrongly) assume it was your patch at fault. Such is the cost of flaky tests! Hopefully folks will continue to whittle down the number of flaky tests in the tree. http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/tool/bot/commitqueuetask.py#L214
Note You need to log in before you can comment on or make changes to this bug.