2011-01-19  Joone Hur  <joone.hur@collabora.co.uk>

Reviewed by Andreas Kling.

        [GTK] No need to invalidate empty areas in ChromeClient::invalidateContentsAndWindow
        https://bugs.webkit.org/show_bug.cgi?id=52702

        Don't call gdk_window_invalidate_rect if an updated rectangle is empty.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::invalidateContentsAndWindow):

Canonical link: https://commits.webkit.org/66368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76130 268f45cc-cd09-0410-ab3c-d52691b4dbfc